--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">CS323-HananiahJonathanProject</string>
     <string name="button_response">Thanks for your order!</string>
     <string name="button_text">Submit Order</string>
+    <string name="name">Enter Your Name</string>
 </resources>
