worked on adding an action bar but it has no labels

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">CS323-HananiahJonathanProject</string>
+    <string name="app_name">McJon-Nae</string>
     <string name="button_response">Thanks for your order!</string>
     <string name="button_text">Submit Order</string>
     <string name="name">Enter Your Name</string>
